# tesi-fhe

./: .gitignore  README.md  findings.md  letteratura.md  pyproject.toml
benchmark/: README.md  adaface_per_seed.py  breakdown_query.py  compressione.py  figura_quant_accuratezza.py  figure_email.py  identificazione_1n.py  pca_scaling.py  rimisura_1n.py  scaling_dimensione.py  scaling_galleria.py  scaling_grande.py  scaling_modelli.py  scaling_reale.py  soglia_reale.py  velocita_dimensione.py  verifica.py  verifica_resnet100.py
benchmark/results/: adaface_per_seed.csv  compressione.csv  compressione_tradeoff.csv  costo_reale.csv  identificazione_1n.csv  pca_scaling.csv  rimisura_1n.csv  scaling_dimensione.csv  scaling_galleria.csv  scaling_grande.csv  scaling_modelli.csv  scaling_reale.csv  soglia_reale.csv  velocita_dimensione.csv  verifica_duri.csv
core/: __init__.py  client.py  dataset.py  matching.py  metriche.py  quantize.py  server.py
docs/: benchmark_dataset.md  modelli_embedding.md
experiments/: 00_hello_concrete.py  01_op_con_pbs.py  02_distanza_quadrata.py  03_galleria_in_chiaro.py  04_client_server.py  utils_fhe.py  utils_grafici.py
experiments/05_pca/: README.md  demo.py  embedding.py
experiments/05_prototipo_e2e/: README.md  client.py  dataset.py  demo.py  pca.py  server.py
experiments/06_argmin_soglia/: README.md  costo.py  frontiera.py  ottimizza.py  prima_dopo.py
experiments/07_descrittori_locali/: README.md  accuratezza.py  costo.py  descrittori.py  ricerca_parametri.py
experiments/08_cnn/: README.md  adaface.py  costo.py  costo_modelli.py  (+2 more)
(+20 files in other folders)
